change in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@ ngAO_studyreport/subaru_ngao_SR_en.log
 ngAO_studyreport/subaru_ngao_SR_en.out
 
 ngAO_studyreport/subaru_ngao_SR_en.toc
+
+ngAO_studyreport/science/veryhighz/nbf.blg
+
+ngAO_studyreport/science/veryhighz/nbf.bbl
+
+ngAO_studyreport/subaru_ngao_SR_en.pdf
+
+ngAO_studyreport/science/.DS_Store
